# VoxelWorker

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  DATA.md  HANDOFF.md  PROGRESS.md  README.md  REPRESENTATION.md  build.rs  chisel-bench-reference.html  clippy.toml  rust-toolchain.toml
crates/assets/: Cargo.toml
crates/assets/src/: custom_pack.rs  faces.rs  lib.rs  registry.rs  vintage_story.rs
crates/camera/: Cargo.toml
crates/camera/src/: authorable.rs  frustum.rs  lib.rs  orbit.rs  projection.rs  tween.rs  view_cube.rs
crates/display/: Cargo.toml
crates/display/src/: block_texture.rs  brick_field.rs  brick_raymarch.rs  lib.rs  renderer.rs  shaders.rs  texture_atlas.rs
crates/display/src/assets/: faces.rs
crates/display/src/brick/: atlas.rs  build.rs  clipmap.rs  cpu_march.rs  gpu_record.rs  incremental.rs  mod.rs  occupancy.rs  raymarch.rs  record.rs  tests.rs
crates/display/src/brick/tests/: field.rs  incremental.rs  incremental_cell_key.rs  mixed_material.rs  mod.rs  pipeline_probe.rs  record_packing.rs
crates/display/src/mesh/: builder.rs  emit.rs  geometry.rs  mod.rs  pipeline.rs  selected_operand.rs  tests.rs  two_layer.rs
crates/display/src/renderer/: background.rs  chrome.rs  gizmo.rs  grid.rs  infinite_grid.rs  lines.rs  materials.rs  mod.rs  onion.rs  operand_ghost.rs  placement_ghost.rs  points.rs  targets.rs  tests.rs  view_cube.rs
crates/display/src/shaders/: background_gradient.wgsl  brick_raymarch.wgsl  cuboid.wgsl  cuboid_face_shading.wgsl  cuboid_loaded.wgsl  grid_overlay.wgsl  infinite_grid.wgsl  line.wgsl  placement_ghost.wgsl  thumbnail.wgsl  viewcube.wgsl  viewcube_chrome.wgsl  viewcube_composite.wgsl  viewcube_lines.wgsl
crates/document/: Cargo.toml
crates/document/src/: command.rs  debug_clouds.rs  intent.rs  lib.rs  orientation_serde.rs  voxel.rs
crates/document/src/scene/: extent.rs  graph.rs  mod.rs  operand_body.rs  producers.rs  sketch_handles.rs  spatial.rs  tests.rs
crates/document/src/sketch/: mod.rs  produce.rs  solid.rs  tests.rs
crates/document/src/voxel/: composite.rs  field.rs  mod.rs  outset.rs  sdf_shape.rs
crates/evaluation/: Cargo.toml
crates/evaluation/src/: chunk_storage.rs  cuboid.rs  disk_chunk_store.rs  lib.rs
crates/evaluation/src/chunk_storage/: mod.rs  tests.rs
crates/evaluation/src/store/: cache.rs  key.rs  mod.rs  rebuild_plan.rs  tests.rs
crates/evaluation/src/two_layer_store/: builder.rs  chunk.rs  classify.rs  field_probe.rs  mod.rs  resident_cache.rs  stream.rs  tests.rs
crates/interchange/: Cargo.toml
crates/interchange/src/: lib.rs  vox_export.rs
crates/interchange/src/vox_export/: mod.rs  tests.rs
crates/raycast/: Cargo.toml
crates/raycast/src/: brick_march.rs  gizmo_pick.rs  lib.rs  placement.rs  surface_raycast.rs  view_cube_pick.rs  voxel_dda.rs
crates/shot/: Cargo.toml
crates/shot/src/: capture.rs  demos.rs  main.rs  options.rs
crates/shot/tests/: golden.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: lib.rs
crates/snapshot/tests/: classification.rs
crates/snapshot/tests/compile_fail/: capture_misses_a_classified_field.rs  capture_misses_a_classified_field.stderr  several_unclassified_fields.rs  several_unclassified_fields.stderr  unclassified_field.rs  unclassified_field.stderr  unknown_category.rs  unknown_category.stderr
crates/snapshot_derive/: Cargo.toml
crates/snapshot_derive/src/: lib.rs
crates/substrate/: Cargo.toml
crates/substrate/benches/: bit_cube.rs  bvh.rs  disjoint_interval_set.rs  greedy_cuboid_decomposition.rs  lattice_key.rs  min_mip_pyramid.rs
crates/substrate/src/: aabb.rs  bit_cube.rs  bitmask_map.rs  bvh.rs  cell_classification.rs  cube_packing.rs  culled_box_meshing.rs  disjoint_interval_set.rs  field_interval.rs  free_list.rs  geom2d.rs  greedy_cuboid_decomposition.rs  lattice_key.rs  lib.rs  min_mip_pyramid.rs  rational.rs  ray.rs  shelf_bin_pack.rs  srgb.rs  supersede.rs  value_cube.rs
crates/substrate/src/interval/: disjoint_interval_set.rs  field_interval.rs  mod.rs  rational.rs
crates/substrate/src/noise/: mod.rs  perlin.rs  rng.rs
crates/substrate/src/occupancy/: bit_cube.rs  cube_packing.rs  mod.rs  shelf_bin_pack.rs  value_cube.rs
crates/substrate/src/solids/: cell_classification.rs  culled_box_meshing.rs  greedy_cuboid_decomposition.rs  mod.rs  scoped_cell_classification.rs
crates/substrate/src/spatial/: aabb.rs  bvh.rs  lattice_key.rs  min_mip_pyramid.rs  mod.rs  orientation.rs  placement.rs  ray.rs  voxel_frames.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  palette.rs  signal_theme.rs
crates/ui/src/chrome/: mod.rs  rail.rs  sketch_overlay.rs  status.rs
crates/ui/src/gizmos/: axis_guide.rs  close_loop_ring.rs  crosshair.rs  diamond.rs  ghost_node.rs  label_chip.rs  mod.rs  open_segment.rs  segment.rs  snap_ticks.rs  vertex_handle.rs
crates/ui/src/icons/: add_point.rs  array.rs  axes_gizmo.rs  box_solid.rs  cancel.rs  carve.rs  chevron_down.rs  chevron_right.rs  close_loop.rs  commit.rs  composed_part.rs  cylinder.rs  delete_vertex.rs  density.rs  displace.rs  drawer.rs  emboss.rs  emboss_recess.rs  extrude.rs  fit.rs  flip.rs  fold_cursor.rs  fold_stack.rs  half_space.rs  home.rs  inset.rs  intersect.rs  link.rs  mark.rs  material.rs  measure.rs  mod.rs  mode_booleans.rs  mode_normal.rs  mode_onion.rs  onion_scrub.rs  orbit.rs  outset.rs  pan.rs  part.rs  (+22 more)
crates/ui/src/icons/large/: mod.rs  (+13 more)
crates/ui/src/panel/: add_shape_dialog.rs  controls.rs  inspector.rs  layers.rs  mod.rs  nodes.rs  palette.rs  points.rs  signal_stack.rs  state.rs
crates/ui/src/theme/: color_palette.rs  mod.rs  style.rs  text.rs
crates/ui/src/widgets/: measurement_field.rs  mod.rs
crates/ui/src/workspace/: browser.rs  fold_strip.rs  inspector.rs  mod.rs  rail.rs  top_bar.rs
crates/voxel_core/: Cargo.toml
crates/voxel_core/src/: core_geom.rs  lib.rs  spatial_index.rs  units.rs  voxel.rs
crates/work/: Cargo.toml
crates/work/src/: lib.rs
crates/work/src/engagement/: orchestrator.rs  routing.rs
crates/work/src/workers/: brick.rs  diameter.rs  export.rs  geometry.rs  scan.rs
(+252 files in other folders)
