[package]
name = "voxel_worker"
version = "0.1.0"
edition = "2021"

# Root-package workspace: the app crate stays here at `src/`; the other members are
# the libraries the app depends on — `crates/substrate` (pure CS/math), `crates/camera`
# (viewing + projective geometry), `crates/raycast` (ray–volume traversal), and
# `crates/voxel_core` (the foundational value vocabulary, one layer above substrate).
# The dependency direction (app -> voxel_core -> substrate/camera/raycast, never the
# reverse; camera -> substrate, raycast -> substrate; camera and raycast never each
# other) is compile-enforced by the crate split. See docs/architecture/data-structures.md
# (the "Substrate" section) and docs/design/per-layer-crates-extraction-map.md for the
# boundary law.
[workspace]
members = [".", "crates/substrate", "crates/camera", "crates/raycast", "crates/voxel_core", "crates/document", "crates/evaluation"]

[lib]
name = "voxel_worker"
path = "src/lib.rs"

[[bin]]
name = "voxel_worker"
path = "src/main.rs"

[[bin]]
name = "shot"
path = "src/bin/shot.rs"
# `shot` is the golden DENSE REFERENCE ORACLE: it resolves through the dense
# whole-region resolvers, which are compile-gated behind the `oracle` feature.
# Requiring the feature here means a plain `cargo build --bins` SKIPS `shot`
# rather than failing, and building it opts the oracle surface in.
required-features = ["oracle"]

[features]
# Off by default so `cargo test` is green on GPU-less CI runners.
# Enable locally with `cargo test --features gpu` to run the windowed
# (GPU-device-dependent) integration tests.
default = []
gpu = []
# Enables the dense whole-region resolve oracles (the O(volume) reference
# resolvers the parity tests and the `shot` golden tool cross-check the sparse
# runtime path against). Never on in production builds: `cargo test` sees them
# via `cfg(test)`, and the `shot` binary opts in via `required-features`. Forwards
# to `document/oracle` (the scene resolve oracle) and `evaluation/oracle` (the dense
# `Store::resolve_region` + `resolve_region_two_layer` oracles) so the `shot` bin can
# reach the whole-region resolvers now living in those crates.
oracle = ["document/oracle", "evaluation/oracle"]
# Opt-in CPU frame profiling via the Tracy backend (zones + frame marks).
# OFF by default: with the feature absent the `profiling` facade compiles to
# no-ops and `tracy-client` (and its C/C++ `tracy-client-sys`) is NOT pulled in.
# Run with: `cargo run --features tracy` and connect the Tracy profiler app.
# See docs/profiling.md for the exact matching Tracy app version.
tracy = ["profiling/profile-with-tracy", "dep:tracy-client"]

[dependencies]
# The pure CS/math substrate library (this workspace's other member). Carries no
# domain types; see docs/architecture/data-structures.md ("Substrate").
substrate = { path = "crates/substrate" }
# The foundational value-vocabulary library (one layer above substrate): the resolved
# voxel cell + sparse grid, the recentre frame, the SDF value functions, the block
# palette id / cell-key codec, the absolute-voxel box + leaf index, and the units core.
# Depends only on glam + serde + substrate. See docs/architecture/01-document.md.
voxel_core = { path = "crates/voxel_core" }
# The authored-TRUTH library (one layer above voxel_core): the scene graph, the
# producers (SdfShape / sketch solid / debug clouds), the 2D sketch, the Intent
# mutation boundary, and the inverse-command undo stack. Imports no evaluation/
# display/wgpu. See docs/architecture/01-document.md.
document = { path = "crates/document" }
# The EVALUATION library (one layer above document): the one evaluator — the residency +
# per-chunk resolve store, the boundary-aware two-layer chunk + block classifier, the
# sparse chunk codec, the out-of-core spill store, and the boundary cuboid decomposition.
# Consumes the document, produces the classified boundary set; imports no display/work/
# shell. See docs/architecture/02-evaluation.md.
evaluation = { path = "crates/evaluation" }
# The viewing + projective-geometry library (orbit rig, projection, ViewCube,
# screen→ray unprojection, frustum culling). wgpu-free graphics mathematics;
# depends only on glam + substrate.
camera = { path = "crates/camera" }
# The ray–volume traversal library (Amanatides–Woo DDA at block and voxel scale,
# hierarchical empty-space skip, slab entry, ViewCube element picking). wgpu-free
# graphics mathematics; depends only on glam + substrate. The CPU brick march and the
# WGSL raymarch shader are its domain adapter and GPU mirror respectively.
raycast = { path = "crates/raycast" }
winit = "0.30.13"
wgpu = "29.0.3"
egui = "0.34.3"
egui-wgpu = "0.34.3"
egui-winit = "0.34.3"
glam = "0.33.1"
bytemuck = { version = "1.25", features = ["derive"] }
pollster = "0.4"
image = "0.25"
rfd = "0.17"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
# Profiling facade (no-op unless a backend feature like `tracy` is enabled).
profiling = "1"
# Tracy backend client, only compiled under `--features tracy`. Pinned EXACTLY:
# `profiling 1.0.18`'s `profile-with-tracy` requires `tracy-client = "0.18"`, and
# `tracy-client 0.18.4` (via tracy-client-sys 0.28.0) targets the Tracy profiler
# app **v0.13.1** — protocols are version-locked, so the pin keeps the documented
# app version deterministic (see docs/profiling.md).
tracy-client = { version = "=0.18.4", optional = true }

[dev-dependencies]
dot_vox = "5"
# Turn on the document crate's `oracle` feature for TEST builds only (dev-deps are
# absent from production `cargo build`). This makes the dense `Scene::resolve_region`
# oracle visible to the app-crate parity tests (`cargo test --lib`) without leaking the
# O(volume) resolver into shipped binaries.
document = { path = "crates/document", features = ["oracle", "test-support"] }
# Turn on the evaluation crate's `oracle` + `test-support` features for TEST builds only.
# `oracle` makes the dense `Store::resolve_region` / `resolve_region_two_layer` resolvers
# visible to the app-crate re-exports + parity tests; `test-support` exposes the
# `expand_resident_chunks_into_grid` oracle expander the `AppCore` grid-overlay test reaches
# across the boundary. Dev-deps are absent from production `cargo build`.
evaluation = { path = "crates/evaluation", features = ["oracle", "test-support"] }
